# toy_models

./: .env  .gitignore  pyproject.toml
configs/: adria.toml  adria_clima.toml
scripts/: chl.slurm  leonardo_setup.sh
tests/: test_toy_models.py
toy_models/: simple_predictor.py
toy_models/utils/: data.py  plots.py
